--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "ajv": "^6.5.2",
     "bootstrap-vue": "^2.0.0-rc.11",
     "register-service-worker": "^1.0.0",
     "vue": "^2.5.16",
+    "vuetify": "^1.0.19",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
@@ -25,6 +27,7 @@
     "eslint-plugin-promise": "^3.8.0",
     "eslint-plugin-standard": "^3.1.0",
     "lint-staged": "^7.2.0",
+    "vue-cli-plugin-vuetify": "^0.1.6",
     "vue-template-compiler": "^2.5.16"
   },
   "eslintConfig": {
