Lint Working Great. Started Importing Code Need to continue and clean up code

--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   },
   "dependencies": {
     "ajv": "^6.5.2",
+    "bip39": "^2.5.0",
+    "bitcoinjs-lib": "^4.0.1",
     "bootstrap-vue": "^2.0.0-rc.11",
     "register-service-worker": "^1.0.0",
+    "secure-random": "^1.1.1",
     "vue": "^2.5.16",
     "vuetify": "^1.0.19",
     "vuex": "^3.0.1"
