--- a/package.json
+++ b/package.json
@@ -1,73 +1,29 @@
 {
-  "name": "app",
-  "version": "0.1.0",
+  "name": "multisigcrypto",
+  "version": "1.0.0",
+  "description": "My sublime Nuxt.js project",
+  "author": "Donely Gunn",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "dev": "nuxt",
+    "build": "nuxt build",
+    "start": "nuxt start",
+    "generate": "nuxt generate",
+    "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
+    "precommit": "npm run lint"
   },
   "dependencies": {
-    "ajv": "^6.5.2",
-    "bip39": "^2.5.0",
-    "bitcoinjs-lib": "^4.0.1",
-    "bootstrap-vue": "^2.0.0-rc.11",
-    "register-service-worker": "^1.0.0",
-    "secure-random": "^1.1.1",
-    "vue": "^2.5.16",
+    "nuxt": "^1.0.0",
     "vuetify": "^1.0.19",
-    "vuex": "^3.0.1"
+    "@nuxtjs/axios": "^5.0.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-eslint": "^3.0.0-rc.9",
-    "@vue/cli-plugin-pwa": "^3.0.0-rc.9",
-    "@vue/cli-service": "^3.0.0-rc.9",
-    "@vue/eslint-config-standard": "^3.0.0-rc.9",
-    "eslint": "^5.2.0",
-    "eslint-config-standard": "^11.0.0",
-    "eslint-plugin-import": "^2.13.0",
-    "eslint-plugin-node": "^7.0.1",
-    "eslint-plugin-promise": "^3.8.0",
-    "eslint-plugin-standard": "^3.1.0",
-    "lint-staged": "^7.2.0",
-    "vue-cli-plugin-vuetify": "^0.1.6",
-    "vue-template-compiler": "^2.5.16"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "@vue/standard"
-    ],
-    "rules": {},
-    "parserOptions": {
-      "parser": "babel-eslint"
-    }
-  },
-  "postcss": {
-    "plugins": {
-      "autoprefixer": {}
-    }
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
-  ],
-  "gitHooks": {
-    "pre-commit": "lint-staged"
-  },
-  "lint-staged": {
-    "*.js": [
-      "vue-cli-service lint",
-      "git add"
-    ],
-    "*.vue": [
-      "vue-cli-service lint",
-      "git add"
-    ]
+    "cross-env": "^5.0.1",
+    "babel-eslint": "^8.2.1",
+    "eslint": "^5.0.1",
+    "eslint-loader": "^2.0.0",
+    "eslint-plugin-vue": "^4.0.0",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.1"
   }
 }
