--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "multisigcrypto",
+  "name": "Multisig_Crypto",
   "version": "1.0.0",
   "description": "My sublime Nuxt.js project",
   "author": "Donely Gunn",
