--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Multisig_Crypto",
+  "name": "MultisigCrypto",
   "version": "1.0.0",
   "description": "My sublime Nuxt.js project",
   "author": "Donely Gunn",
