Setup Nested Components

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "MultisigCrypto",
   "version": "1.0.0",
-  "description": "My sublime Nuxt.js project",
+  "description": "The Most Secure Way To Store Crypto",
   "author": "Donely Gunn",
   "private": true,
   "scripts": {
