--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.0.0",
-    "eslint-config-standard": "^12.0.0",
     "file-system": "^2.2.2",
     "nuxt": "^1.0.0",
     "serve": "^10.0.1",
@@ -24,11 +23,16 @@
     "babel-eslint": "^8.2.6",
     "cross-env": "^5.0.1",
     "eslint": "^5.7.0",
-    "eslint-config-prettier": "^3.0.1",
-    "eslint-loader": "^2.1.0",
-    "eslint-plugin-prettier": "^2.6.2",
+    "eslint-config-prettier": "^3.1.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-loader": "^2.1.1",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-node": "^7.0.1",
+    "eslint-plugin-prettier": "^2.7.0",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^4.7.1",
-    "prettier": "^1.14.2",
+    "prettier": "^1.14.3",
     "standard": "^12.0.1",
     "standard-loader": "^6.0.1",
     "stylus": "^0.54.5",
