--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.0.0",
+    "bip39": "^2.5.0",
     "file-system": "^2.2.2",
     "nuxt": "^1.0.0",
     "serve": "^10.0.1",
