--- a/package.json
+++ b/package.json
@@ -13,17 +13,36 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
-    "@nuxtjs/axios": "^5.0.0",
+    "@babel/runtime": "^7.1.2",
+    "@ledgerhq/hw-app-btc": "^4.27.0",
+    "@ledgerhq/hw-transport": "^4.24.0",
+    "@ledgerhq/hw-transport-node-hid": "^4.24.0",
+    "@ledgerhq/hw-transport-u2f": "^4.28.0",
+    "@nuxtjs/axios": "^5.3.3",
+    "aws-sdk": "^2.345.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-runtime": "^6.26.0",
     "bip39": "^2.5.0",
     "file-system": "^2.2.2",
-    "nuxt": "^1.0.0",
-    "serve": "^10.0.1",
-    "vuetify": "^1.0.19"
+    "nuxt": "^2.2.0",
+    "serve": "^10.0.2",
+    "trezor-connect": "^6.0.1",
+    "vuetify": "^1.3.3",
+    "webpack": "^4.23.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.1.2",
+    "@babel/plugin-transform-runtime": "^7.1.0",
+    "@babel/preset-env": "^7.1.0",
+    "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.6",
+    "babel-loader": "^8.0.0-beta.0",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "cross-env": "^5.0.1",
-    "eslint": "^5.7.0",
+    "eslint": "^5.8.0",
     "eslint-config-prettier": "^3.1.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-loader": "^2.1.1",
