Working Leger Integration

--- a/package.json
+++ b/package.json
@@ -15,12 +15,16 @@
   "dependencies": {
     "@babel/runtime": "^7.1.2",
     "@ledgerhq/hw-app-btc": "^4.27.0",
+    "@ledgerhq/hw-app-eth": "^4.24.0",
     "@ledgerhq/hw-transport-u2f": "^4.28.0",
     "@nuxtjs/axios": "^5.3.3",
     "aws-sdk": "^2.345.0",
     "babel-preset-env": "^1.7.0",
     "babel-runtime": "^6.26.0",
+    "bip32": "^1.0.2",
+    "bip32-path": "^0.4.2",
     "bip39": "^2.5.0",
+    "bitcoinjs-lib": "^4.0.2",
     "file-system": "^2.2.2",
     "nuxt": "^2.2.0",
     "serve": "^10.0.2",
