--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@ledgerhq/hw-app-eth": "^4.24.0",
     "@ledgerhq/hw-transport-u2f": "^4.28.0",
     "@nuxtjs/axios": "^5.3.3",
+    "atob": "^2.1.2",
     "aws-sdk": "^2.345.0",
     "babel-preset-env": "^1.7.0",
     "babel-runtime": "^6.26.0",
@@ -25,8 +26,10 @@
     "bip32-path": "^0.4.2",
     "bip39": "^2.5.0",
     "bitcoinjs-lib": "^4.0.2",
+    "btoa": "^1.2.1",
     "file-system": "^2.2.2",
     "nuxt": "^2.2.0",
+    "qrcode.vue": "^1.6.1",
     "serve": "^10.0.2",
     "trezor-connect": "^6.0.1",
     "vuetify": "^1.3.3",
