--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "bitcoinjs-lib": "^4.0.2",
     "btoa": "^1.2.1",
     "file-system": "^2.2.2",
+    "localforage": "^1.7.3",
     "nuxt": "^2.2.0",
     "qrcode.vue": "^1.6.1",
     "serve": "^10.0.2",
     "trezor-connect": "^6.0.1",
     "vuetify": "^1.3.3",
+    "vuex-persist": "^2.0.0",
     "webpack": "^4.23.1"
   },
   "devDependencies": {
