--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "The Most Secure Way To Store Crypto",
   "author": "Donely Gunn",
-  "private": true,
+  "private": false,
   "scripts": {
     "dev": "node server.js",
     "build": "nuxt build",
@@ -13,53 +13,48 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
-    "@babel/runtime": "^7.1.2",
-    "@ledgerhq/hw-app-btc": "^4.27.0",
+    "@babel/runtime": "^7.1.5",
+    "@ledgerhq/hw-app-btc": "^4.30.0",
     "@ledgerhq/hw-app-eth": "^4.24.0",
-    "@ledgerhq/hw-transport-u2f": "^4.28.0",
-    "@nuxtjs/axios": "^5.3.3",
+    "@ledgerhq/hw-transport-u2f": "^4.31.0",
+    "@nuxtjs/axios": "^5.3.6",
     "atob": "^2.1.2",
-    "aws-sdk": "^2.345.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-runtime": "^6.26.0",
     "bip32": "^1.0.2",
     "bip32-path": "^0.4.2",
     "bip39": "^2.5.0",
     "bitcoinjs-lib": "^4.0.2",
     "btoa": "^1.2.1",
-    "file-system": "^2.2.2",
     "localforage": "^1.7.3",
-    "nuxt": "^2.2.0",
+    "nuxt": "^2.3.4",
     "qrcode.vue": "^1.6.1",
-    "serve": "^10.0.2",
-    "trezor-connect": "^6.0.1",
-    "vuetify": "^1.3.3",
+    "trezor-connect": "^6.0.2",
+    "vuetify": "^1.3.11",
     "vuex-persist": "^2.0.0",
-    "webpack": "^4.23.1"
+    "webpack": "^4.26.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.1.2",
+    "@babel/core": "^7.1.6",
     "@babel/plugin-transform-runtime": "^7.1.0",
-    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-env": "^7.1.6",
     "babel-core": "^6.26.3",
-    "babel-eslint": "^8.2.6",
-    "babel-loader": "^8.0.0-beta.0",
+    "babel-eslint": "^10.0.1",
+    "babel-loader": "^8.0.4",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "cross-env": "^5.0.1",
-    "eslint": "^5.8.0",
-    "eslint-config-prettier": "^3.1.0",
+    "eslint": "^5.9.0",
+    "eslint-config-prettier": "^3.3.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-loader": "^2.1.1",
     "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-node": "^7.0.1",
-    "eslint-plugin-prettier": "^2.7.0",
+    "eslint-plugin-node": "^8.0.0",
+    "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^4.7.1",
-    "prettier": "^1.14.3",
+    "prettier": "^1.15.3",
     "standard": "^12.0.1",
     "standard-loader": "^6.0.1",
     "stylus": "^0.54.5",
