--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@babel/core": "^7.0.0-0",
     "vue": "^2.5.21",
+    "vue-qrcode-reader": "^1.3.4",
     "vue-router": "^3.0.1",
     "vuetify": "^1.3.0",
     "vuex": "^3.0.1"
