--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "vue-qrcode-reader": "^1.3.4",
     "vue-router": "^3.0.1",
     "vuetify": "^1.3.0",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "vuex-persistedstate": "^2.5.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.3.0",
