--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "vue-router": "^3.0.1",
     "vuetify": "^1.3.0",
     "vuex": "^3.0.1",
-    "vuex-persistedstate": "^2.5.4"
+    "vuex-persistedstate": "^2.5.4",
+    "webpack": "4.29.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.3.0",
