--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
   },
   "dependencies": {
     "@babel/core": "^7.0.0-0",
+    "@ledgerhq/hw-app-btc": "^4.35.0",
+    "@ledgerhq/hw-transport-u2f": "^4.35.0",
+    "bip32": "^1.0.2",
+    "bip32-path": "^0.4.2",
+    "bitcoinjs-lib": "^4.0.3",
     "vue": "^2.5.21",
     "vue-qrcode-reader": "^1.3.4",
     "vue-router": "^3.0.1",
