--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@babel/core": "^7.0.0-0",
     "@ledgerhq/hw-app-btc": "^4.35.0",
     "@ledgerhq/hw-transport-node-hid": "^4.35.0",
+    "@ledgerhq/hw-transport-u2f": "^4.35.0",
+    "babel-polyfill": "^6.26.0",
     "bip32": "^1.0.2",
     "bip32-path": "^0.4.2",
     "bitcoinjs-lib": "^4.0.3",
