--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-polyfill": "^6.26.0",
     "bip32": "^1.0.2",
     "bip32-path": "^0.4.2",
+    "bip39": "^2.5.0",
     "bitcoinjs-lib": "^4.0.3",
     "vue": "^2.5.21",
     "vue-qrcode-reader": "^1.3.4",
